--- a/templates/index.html
+++ b/templates/index.html
@@ -2320,13 +2320,20 @@ async function addCustomer() {
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
-                        <span>10.000/mo Emails</span>
+                        <span>10,000/mo Emails</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
-                        <span>Email Personalisation</span>
+                        <span>Email Personalization</span>
+                      </div>
+                      <div class="list">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                        </svg>
+          
+                        <span>Automatic Email Sending</span>
                       </div>
                       <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -2335,7 +2342,7 @@ async function addCustomer() {
           
                         <span>Email Tracking</span>
                       </div>
-                      <div class="list">
+                        <div class="list">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                         </svg>
@@ -2388,8 +2395,15 @@ async function addCustomer() {
           
                         <span>Customized System</span>
                       </div>
-                      
+                      <div class="list">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                        </svg>
+          
+                        <span>Email Personalization + Tracking</span>
+                      </div>
                   </div>
+                        
                   <div class="bottom">
         
                     <a class="btn" href="#" onclick="window.location.href='/connect'">Get in touch</a>
